Creamos los outlines de las clases 2 y 3 del curso. Actualizamos el outline de la clase 1.

--- a/Nivel2-A/guia1.tex
+++ b/Nivel2-A/guia1.tex
@@ -1,9 +1,9 @@
-\documentclass[a4paper]{book}
+\documentclass[a4paper]{article}
 
 \title{Curso Nivel 2a}
 
 \begin{document}
-\chapter{Guía 1}
+\section{Guía 1}
 En la primer semana del curso tenemos por objetivo
 \begin{itemize}
     \item Familiarizarnos con el uso del SNAP
@@ -13,17 +13,11 @@ En la primer semana del curso tenemos por objetivo
 
 \section{Uso del SNAP}
 
-INTRODUCCION AL SNAP. ESA. MODULOS Y NUCLEO
+INTRODUCCION AL SNAP. ESA. MODULOS Y NUCLEO. PARTES DE LA INTERFACE GRAFICA.
 
-PARTES DE LA INTERFACE GRAFICA.
+APERTURA DE IMAGENES SENTINEL 2. COMBINACION RGB-COLOR REAL. NAVEGAR POR LA IMAGEN
 
-APERTURA DE IMAGENES SENTINEL 2.
-
-COMBINACION RGB-COLOR REAL. NAVEGAR POR LA IMAGEN
-
-CARACTERISTICAS DE LA IMAGEN. METADATOS. VECTORES. BANDAS
-
-BANDAS DE CALIDAD
+CARACTERISTICAS DE LA IMAGEN. METADATOS. VECTORES. BANDAS. BANDAS DE CALIDAD
 
 \section{Combinaciones RGB}
 
@@ -32,8 +26,6 @@ COMBINACION RGB: COLOR REAL. INTERPRETACION. QUE ME DICE DE LA IMAGEN
 COMBINACION RGB: INFRARROJO COLOR. INTERPRETACION. DONDE GANO. DONDE PIERDO
 
 COMBINACION RGB: FALSO COLOR COMPUESTO. INTERPRETACION. QUE GANE DESDE EL PUNTO DE VISTA DE LA VEGETACION. QUE PERDÍ DESDE EL PUNTO DE VISTA DEL AGUA.
-
-PARAMETROS ESTADISTICOS DE LA IMAGEN. HISTOGRAMA.
 
 \section{Firmas espectrales}
 
@@ -50,5 +42,7 @@ FIRMAS ESPECTRALES. URBANO.
 FIRMAS ESPECTRALES. VEGETACION NATURAL Y CULTIVOS.
 
 FIRMAS ESPECTRALES. AGUA. COMPARACION ENTRE LOS RIOS.
+
+EXPORTAR RESULTADOS
 
 \end{document}
