Agregamos los esqueletos de las guias 4, 5 y 6del curso

--- a/Nivel2-A/guia1.tex
+++ b/Nivel2-A/guia1.tex
@@ -13,9 +13,9 @@ En la primer semana del curso tenemos por objetivo
 
 \section{Uso del SNAP}
 
-INTRODUCCION AL SNAP. ESA. MODULOS Y NUCLEO. PARTES DE LA INTERFACE GRAFICA.
+El SNAP\footnote{Sentinel Application Toolbox} es un software de procesamiento de imágenes desarrollado por la ESA
 
-APERTURA DE IMAGENES SENTINEL 2. COMBINACION RGB-COLOR REAL. NAVEGAR POR LA IMAGEN
+APERTURA DE IMAGENES SENTINEL 2. COMBINACION RGB-COLOR REAL. NAVEGAR POR LA IMAGENs
 
 CARACTERISTICAS DE LA IMAGEN. METADATOS. VECTORES. BANDAS. BANDAS DE CALIDAD
 
