--- a/Nivel2-A/Documentos/Guia/guia1.tex
+++ b/Nivel2-A/Documentos/Guia/guia1.tex
@@ -1,6 +1,6 @@
-\documentclass[a4paper,12pt]{book}
+\documentclass[a4paper,10pt]{book}
 \input{preamble.tex}
-
+\usepackage{float}
 \graphicspath{{./figs/}}
 
 \title{Curso Nivel 2a}
@@ -15,9 +15,9 @@ El objetivo de esta clase es doble. Por un lado familiarizarse con el entorno gr
 
 Descomprima los archivos decargados que se denominan \path{material.tar.gz}. Abra el programa SNAP, allí encontra la interfaz gráfica del usuario (Figura \ref{fig:int})
 
-\begin{figure}[h]
+\begin{figure}[h!]
     \centering
-    \includegraphics{fig:int.png}
+    \includegraphics[scale=1.1]{fig:int.png}
     \caption{Interfáz gráfica del usuario. El árbol de capas y el area de visualización se encuentran siempre al abrir el programa.}
     \label{fig:int}
 \end{figure}
@@ -57,18 +57,18 @@ Si despliega la carpeta \emph{Bands} dentro de la imagen abierta pueded mostrar 
 
 Para realizar combinaciones espectrales con la imagen abierta haga click derecho sobre el nombre en el \emph{Product Explorer} y luego en \emph{Open RGB image windows.}. Se desplegará una nueva ventana (Figura \ref{fig:RGB}) que nos permitirá elegir la combinación de bandas.
 
-\begin{figure}[h]
+\begin{figure}[h!]
     \centering
-    %\includegraphics{}
+    \includegraphics[scale=0.7]{fig:RGB.png}
     \caption{Ventana para elegir la combinación de bandas. Puede seleccionarla eligiendo una banda para cada canal del monitor ,\emph{Red, Green, Blue} o puede utilizar una preseleccionada del menú \emph{Profile}}
     \label{fig:RGB}
 \end{figure}
 
 Por defecto elegirá la combinación de bandas que utiliza las bandas 4, 3 y 2 de Sentinel 2 y la desplegará haciendo click en OK (Figura \ref{fig:RVA}).
 
-\begin{figure}[h]
+\begin{figure}[h!]
     \centering
-    \includegraphics{fig:RVA.png}
+    \includegraphics[scale=0.5]{fig:RVA.png}
     \caption{Imagen en combinación de colores de color real.}
     \label{fig:RVA}
 \end{figure}
@@ -79,8 +79,9 @@ Por defecto elegirá la combinación de bandas que utiliza las bandas 4, 3 y 2 d
 
 Muevase dentro de la imagen utilizando las herramientas de navegación y zoom (Figura \ref{fig:NAV})
 
-\begin{figure}[h]
-    %\includegraphics{}
+\begin{figure}[h!]
+    \centering
+    \includegraphics[scale=0.5]{fig:NAV.png}
     \caption{Herramientass de navegación.}
     \label{fig:NAV}
 \end{figure}
@@ -93,9 +94,9 @@ Explore la imagen desplegada en esta combinación de color.
 
 Seleccione ahora la combinacion de color RGB \emph{Sentinel 2 MSI False-color Infrarred} que incluye a una banda del infrarrojo cercano y dos del visible (Figura \ref{fig:NRG}). Explore la imagen desplegada en esta combinación de color.
 
-\begin{figure}[h]
+\begin{figure}[h!]
     \centering
-    \includegraphics{fig:NRG.png}
+    \includegraphics[scale=0.5]{fig:NRG.png}
     \caption{Imagen en combinación de colores infrarrojo color.}
     \label{fig:NRG}
 \end{figure}
@@ -106,9 +107,9 @@ Seleccione ahora la combinacion de color RGB \emph{Sentinel 2 MSI False-color In
 
 Seleccione ahora la combinacion de color RGB \emph{Sentinel 2 MSI Healthy Vegetation} que incluye a una banda del infrarrojo cercano, una del infrarrojo medio y una del visible (Figura \ref{fig:SNR}). Explore la imagen desplegada en esta combinación de color.
 
-\begin{figure}[h]
+\begin{figure}[h!]
     \centering
-    \includegraphics{fig:SNR.png}
+    \includegraphics[scale=0.5]{fig:SNR.png}
     \caption{Imagen en combinación de colores falso color compuesto.}
     \label{fig:SNR}
 \end{figure}
@@ -126,8 +127,9 @@ Seleccione ahora la combinacion de color RGB \emph{Sentinel 2 MSI Healthy Vegeta
 
 La herramienta \emph{Spectrum view} permite mostrar y extraer los valores de un píxel en función de la longitud de onda (Figura \ref{fig:sps}). Una vez extraidos estos pueden ser mostrados en pantalla como gráfico de lineas o guardados en un archivo de texto.
 
-\begin{figure}
-    %\includegraphics{/path/to/figure}
+\begin{figure}[h!]
+    \centering
+    \includegraphics[scale=0.7]{fig:sps.png}
     \caption{Herraamienta \emph{Spectrum view} que permite mostrar lass firmas espectrales de distintos píxeles de la imagen.}
     \label{fig:sps}
 \end{figure}
@@ -140,8 +142,9 @@ Despliegue la imagen \path{S2A_MSIL2A_20170720.dim} en una combinación de banda
 
 Es posible agregar \emph{Pins} a la imagen y utilizarlo para mostrar la firma espectral sobre estos puntos. Para hacerlo seleccione la herramienta \emph{Pin placement tool} de la barra de herramienta y haga click sobre el Rio Iguazú. Observará que un pequeño pin aparece en este lugar (Figura \ref{fig:pin}).
 
-\begin{figure}
-    %\includegraphics{/path/to/figure}
+\begin{figure}[h!]
+    \centering
+    \includegraphics[scale=0.7]{fig:pin.png}
     \caption{Pin sobre un píxel en la imagen.}
     \label{fig:pin}
 \end{figure}
@@ -150,17 +153,19 @@ Utilice la herramienta \emph{Pin placement tool} para ubicar pines en distintas 
 
 Haciendo click en \emph{Pin manager} se desplegará una nueva ventana  con propiedades de los pins. Puede observar en ella el pixel sobre el que se encuentra, su latitud y longitud, el color del que se muestraa y la etiqueta \footnote{Label} que se le asigna. Asgine a cada pin una etiqueta y color diferenciado (Figura \ref{fig:pmg}).
 
-\begin{figure}
-    %\includegraphics{/path/to/figure}
+\begin{figure}[h!]
+    \centering
+    \includegraphics[scale=0.7]{fig:pmg}
     \caption{Ping manager}
     \label{fig:pmg}
 \end{figure}
 
 Una vez creados los pins es posibles mostrar la firma espectral de alguno o todos ellos. Abra para esto la herramienta \emph{Spectrum view} y seleccione las opciones: \emph{Show spectra for all pins}, para mostrar la firma espectral de todos los pins, o \emph{Show spectra for selected pins}, para mostra la firma espectral de los pines seleccionados (Figura \ref{fig:spn}).
 
-\begin{figure}
-    %\includegraphics{/path/to/figure}
-    \caption{Ping manager}
+\begin{figure}[h!]
+    \centering
+    \includegraphics[scale=0.7]{fig:spn.png}
+    \caption{Firmas espectrles de los pines seleccionados}
     \label{fig:spn}
 \end{figure}
 
@@ -168,13 +173,7 @@ Es posible también cambiar la escala con la que se muestra la la firma espectra
 
 Es además posible exportar las mediciones de la firma espectral. Por un lado puede guardar el gráfico haciendo click derecho sobre el y eligiendo la opción \emph{Save as...}. Por otro, puede exportar los valores de reflectancia de la firma espectral haciendo click en el botón \emph{Export spectra to text file}.
 
-Compare las firmas espectrales de las zonas de forestación y selva paranense (Figura \ref{fig:svg}).
-
-\begin{figure}
-    %\includegraphics{/path/to/figure}
-    \caption{Firmas espectrales de vegetación.}
-    \label{fig:svg}
-\end{figure}
+Compare las firmas espectrales de las zonas de forestación y selva paranense (Figura \ref{fig:spn}).
 
 \begin{que}
     ¿En que zonas del espectro son más similares las firmas de Selva Alta y Forestación? ¿En que zonas del espectro son más distintas las tres firmasa espectrales? ¿Que le permite decir esto sobre el contenido de contenido de relativo de pigmentos de las tres coberturas? ¿Y sobre el contenido relativo de humedad en la vegetación? ¿Que suposición está realizando al comparar las tres firmas?
@@ -186,18 +185,5 @@ Compare las firmas espectrales del rio Parana y el rio Iguazu cerca de la zona d
     ¿En que zona del espectro electromagnético son más distintass las firmas espectrales? ¿A que se debe esta diferencia? ¿Que le dice sobre la combinación de bandas que más nos permite distinguir propiedades en los cuerpos de agua? ¿Cual de los dos rios parece tener mayor contenido de sedimento?
 \end{que}
 
-\section{Evaluación}
-
-\begin{que}
-    ¿Que combinación de bandas le permite distinguir más detalles sobre la vegetación?
-\end{que}
-
-\begin{que}
-    ¿Que zona del espectro electromagnetico corresponde a [pigmentos,cobertura foliar,contenido de humedad] en la vegetacion?
-\end{que}
-
-\begin{que}
-    ¿Cual de los tres cuerpos de agua presenta mayor contenido de sedimentos?
-\end{que}
 
 \end{document}
