Cambiamos la caratula del curso

--- a/Nivel0-A/Guia/guia.tex
+++ b/Nivel0-A/Guia/guia.tex
@@ -3,7 +3,7 @@
 \usepackage{float}
 \graphicspath{{./figs/}}
 
-\title{{\large Nivel 0a} \\ Interpretación visual de imágenes satelitales}
+\title{{\large Nivel 0} \\ Interpretación visual de imágenes satelitales}
 \author{Marina Compagnucci \and Laura Rouco \and Francisco Nemiña}
 \begin{document}
 \maketitle
